<?xml version="1.0" encoding="utf-8"?>

<!-- Created by Ionescu Radu Stefan -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ase.ionescuradu.carexpress.activities.CategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvStart"
                    android:textAlignment="center">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvEnd"
                    android:textAlignment="center">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CalendarView
                    android:id="@+id/cvStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </CalendarView>

                <CalendarView
                    android:id="@+id/cvEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </CalendarView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bMicro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:drawableTop="@mipmap/ic_microf"
                android:text="@string/bMicro"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/bCompact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:drawableTop="@mipmap/ic_compactf"
                android:text="@string/bCompact"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bSedan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:drawableTop="@mipmap/ic_sedanf"
                android:text="@string/bSedan"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/bWagon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:drawableTop="@mipmap/ic_wagonf"
                android:text="@string/bWagon"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bSuv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:drawableTop="@mipmap/ic_suvf"
                android:text="@string/bSuv"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/bBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:drawableTop="@mipmap/ic_busf"
                android:text="@string/bBus"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bAll">
            </Button>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>